--- a/website/golang.html
+++ b/website/golang.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta name="go-import" content="vuelto.me git https://github.com/vuelto-org/vuelto.git"> 
+    <title>Vuelto</title>
+    <meta name="description" content="A fast and lightweight game engine powered by Go and OpenGL. Easy, fast and lightweight!">
     <script>
         window.location.href = "home";
     </script>
