--- a/website/index.html
+++ b/website/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta name="go-import" content="vuelto.me git https://github.com/vuelto-org/vuelto.git"> 
+  <head>
+    <meta name="go-import" content="vuelto.pp.ua git https://github.com/vuelto-org/vuelto.git" />
     <script>
-        window.location.href = "home";
+      window.location.href = "home";
     </script>
-</head>
+  </head>
 </html>
-
