--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
 {% block site_meta %}
-  <meta name="go-import" content="vuelto.me git https://github.com/vuelto-org/vuelto.git"> 
+  <meta name="go-import" content="vuelto.pp.ua git https://github.com/vuelto-org/vuelto.git">
 {% endblock %}
-
-
