fix a buncha typos and formatting issues

--- a/website/repo.html
+++ b/website/repo.html
@@ -1,8 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <script>
-      window.location.href = "https://github.com/vuelto-org/vuelto";
-    </script>
-  </head>
-</html>
+<!DOCTYPE html><html lang="en"><head><script>window.location.href = "https://github.com/vuelto-org/vuelto";</script></head></html>
